CHANGES
*******

1.3-1 (2013-05-19)
==================

- Add minified locales missing in 1.3.

1.3 (2013-05-19)
================

- Update to 1.3


1.2 (2013-03-03)
================

- Update to 1.2


1.0.5 (2012-10-16)
==================

- Update to 1.0.5

- Add minified versions for all resources

- Add timepicker_locales dictionary.

- Only depend on js.jqueryui.ui_datepicker and js.jqueryui.ui_slider.
  This avoids pulling in the complete jQuery UI when only parts are needed.

0.9.8 (2011-12-12)
==================

- Update to 0.9.8.


0.9.7-1 (2011-11-10)
====================

- Expose all i18n/l10n files as individual resources.


0.9.7 (2011-11-08)
==================

- Update to 0.9.7.


0.9.6 (2011-09-07)
==================

- Initial release.