@@ -3,7 +3,7 @@ develop = .
 parts = py.test yuicompressor
 
 [py.test]
-recipe = z3c.recipe.scripts
+recipe = zc.recipe.egg
 # Need exit status code for buildbot.
 # See https://bugs.launchpad.net/zc.buildout/+bug/164629
 script-initialization =
