@@ -1,6 +1,9 @@
 CHANGES
 *******
 
+
+- Update to ``zc.buildout`` 2.x.
+
 1.3-1 (2013-05-19)
 ==================
 
